# uwucc

./: .gitignore  Cargo.toml  README.md  flake.nix  notes.md  rust-toolchain.toml  shell.nix
analysis/: Cargo.toml
analysis/src/: ctxt.rs  hir.rs  ir.rs  lib.rs  lower.rs  ty.rs
analysis/src/ir/: custom.rs  info.rs  pretty.rs  validate.rs  visit.rs
analysis/src/lower/: builder.rs  typeck.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  registers.rs  stack.rs  x86.rs  x86_64.rs
codegen_x86/: Cargo.toml
codegen_x86/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  sym.rs  token.rs
parser/src/parser/: expr.rs  tests.rs
parser/src/parser/snapshots/: parser__parser__tests__decl_stmts.snap  parser__parser__tests__else_if.snap  parser__parser__tests__empty_function_with_params.snap  parser__parser__tests__empty_funky_attributes_no_params_function.snap  parser__parser__tests__empty_void_function.snap  parser__parser__tests__expr_stmt.snap  parser__parser__tests__global_variable_declarations.snap  parser__parser__tests__hello_world.snap  parser__parser__tests__if_else.snap  parser__parser__tests__if_else_braceless.snap  parser__parser__tests__integer_types.snap  parser__parser__tests__return_empty.snap  parser__parser__tests__return_expr.snap  parser__parser__tests__small_expression.snap  parser__parser__tests__small_expressions.snap
parser/src/pre/: lexer.rs  mod.rs
parser/src/pre/snapshots/: parser__pre__lexer__tests__hello_world.snap  parser__pre__lexer__tests__identifiers.snap  parser__pre__lexer__tests__left_left_chevron_eq.snap  parser__pre__lexer__tests__lex_test.snap  parser__pre__lexer__tests__pretty_arrow.snap  parser__pre__lexer__tests__some_operators.snap
parser/src/snapshots/: parser__token__tests__hello_world.snap
src/: main.rs
