[workspace]
members = [".", "./parser", "./analysis", "./codegen_x86"]

[package]
name = "uwucc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.10.0"
analysis = { path = "./analysis" }
parser = { path = "./parser" }
dbg-pls = { version = "0.3.2", features = ["derive", "colors"] }
