[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.10.0"
indexmap = "1.9.1"
parser = { path = "../parser" }
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["union"] }
