[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
dbg-pls = { version = "0.3.2", features = ["derive", "colors"] }
peekmore = { version = "1.0.0", features = ["smallvec"] }

[dev-dependencies]
insta = "1.15.0"
